# grapevine

./: .dockerignore  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.api  Dockerfile.cron-worker  Dockerfile.grapevine  Dockerfile.index-worker  Dockerfile.ingest  Dockerfile.ingest-gatekeeper  Dockerfile.ingest-worker  Dockerfile.migrations  Dockerfile.pr-reviewer  Dockerfile.slackbot  Dockerfile.steward  LICENSE  README.md  Tiltfile  docker-compose.yml  docker-entrypoint.sh  local_db_migrate.sh  mypy.ini  pyproject.toml  pytest.ini
.claude/agents/: connector-architect.md
.claude/commands/: new-connector.md
.cursor/plans/: open_source_grapevine_v2_f66cae2c.plan.md
.github/: CODEOWNERS
.github/devin/: runbook.md
.github/scripts/: call_pr_review_tool.py  notify-devenv.sh  post_pr_review.py  send_slack_review.py  wait-for-argocd-app-ready.sh
.github/test-plan/: entrypoints.md
.github/workflows/: actionlint.yaml  assign-linear-ticket-to-devin.yaml  build-docker-images.yaml  ci.yaml  deploy-production.yaml  deploy-staging.yaml  devenv.yaml  generate-test-plan.yaml  grapevine-pr-review.yml  hotfix-prod.yaml  promote-production.yaml  run-acceptance-tests.yaml  trufflehog-secrets.yaml  update-promotion-pr.yaml
connectors/asana/: __init__.py  asana_citation_resolver.py  asana_pruner.py  asana_sync_service.py
connectors/attio/: __init__.py  attio_artifacts.py  attio_backfill_root_extractor.py  attio_citation_resolver.py  attio_company_backfill_extractor.py  attio_company_document.py  attio_company_transformer.py  attio_deal_backfill_extractor.py  attio_deal_document.py  attio_deal_transformer.py  attio_models.py  attio_person_backfill_extractor.py  attio_person_document.py  attio_person_transformer.py  attio_pruner.py  attio_sync_service.py  attio_webhook_extractor.py  attio_webhook_handler.py
connectors/base/: __init__.py  base_chunk.py  base_citation_resolver.py  base_document.py  base_extractor.py  base_ingest_artifact.py  base_pruner.py  base_transformer.py  doc_ids.py  document_source.py  external_source.py  models.py
connectors/canva/: __init__.py  canva_citation_resolver.py  canva_documents.py  canva_models.py  canva_pruner.py  canva_sync_service.py  canva_transformer.py
connectors/cli/: __init__.py  __main__.py  health_checks.py
connectors/clickup/: __init__.py  clickup_citation_resolver.py  clickup_sync_service.py
connectors/confluence/: README.md  __init__.py  confluence_api_backfill_extractor.py  confluence_api_backfill_root_extractor.py  confluence_artifacts.py  confluence_base.py  confluence_citation_resolver.py  confluence_models.py  confluence_page_document.py  confluence_pruner.py  confluence_transformer.py  confluence_webhook_extractor.py  confluence_webhook_handler.py
connectors/custom/: __init__.py  custom_collection_artifacts.py  custom_collection_document.py  custom_collection_extractor.py  (+1 more)
docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  SELF_HOSTING.md  attio-docs.md  auth-setup.md  billing-and-usage.md  connector-ingestion-implementation-guide.md  connector-oauth-implementation-guide.md  feature-flags.md  migrations.md  optional-features.md  redis.md  snowflake-connector-technical-documentation.md
js-services/: .gitignore  .prettierignore  .swcrc  .yarnrc.yml  BUILD.md  eslint.shared.js  knip.json  nx.json  package.json  prettier.config.cjs  svgrc.base.cjs  tsconfig.backend.json  tsconfig.frontend.json  tsconfig.json
kustomize/: README.md
migrations/: README.md
scripts/: backfill_cli.py  backfill_permissions.py  backfill_wrapper.sh  build-container.sh  call_pr_review_tool.py  check-uv.sh  check_credentials.py  check_turbopuffer_permissions.py  checks.sh  connector_wrapper.sh  create_ssm_parameters.py  generate_mcp_token.py  get_tenant_config.py  get_tenant_db_urls.py  js-format-wrapper.sh  local_dev_initial_setup.sh  localstack_init.py  lookup_tenant.py  reindex_single_document.py  reindex_wrapper.sh  repair_tenant_table_permissions.py  ruff-fix-wrapper.sh  ruff-format-wrapper.sh  run_opensearch_migrations.py  run_with_project.sh  send_full_reindex_all_tenants.py  test_large_webhook.py  vulture_autofix.py  workos_organization_report.py
supabase/: config.toml
tests/: test_permission_filters.py  test_permissions_middleware.py  test_ttl_cache.py
(+1896 files in other folders)
