[project]
name = "corporate-context"
version = "0.1.0"
description = "A real-time unified knowledge store that ingests information from corporate knowledge sources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "slack-sdk>=3.35.0",
    "openai>=1.107.0",
    "asyncpg>=0.29.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "mcp>=1.0.0",
    "supabase>=2.0.0",
    "fastmcp>=2.13.0",
    "rich>=14.0.0",
    "fastapi>=0.115.13",
    "psycopg2-binary>=2.9.10",
    "tiktoken>=0.11.0",
    "pygithub>=2.6.1",
    "PyJWT>=2.8.0",
    "aiohttp>=3.12.9",
    "opensearch-py>=3.0.0",
    "uvicorn>=0.34.3",
    "prometheus-client>=0.21.0",
    "langchain-text-splitters>=0.3.0",
    "pytz>=2025.2",
    "langfuse>=3.2.1",
    "boto3>=1.35.0",
    "sqlparse>=0.5.3",
    "charset-normalizer>=3.4.0",
    "typer>=0.16.1",
    "questionary>=2.1.0",
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.149.0",
    "structlog>=25.4.0",
    "firebase-admin>=7.1.0",
    "markitdown[pdf]>=0.1.3",
    "newrelic>=10.2.0",
    "workos>=5.0.0",
    "turbopuffer>=1.1.0",
    "amazon-sqs-extended-client>=1.0.1",
    "redis>=5.2.0",
    "amplitude-analytics>=1.1.0",
    "grpcio>=1.75.0",
    "avro-python3>=1.10.0",
    "protobuf>=4.21.0",
    "hubspot-api-client>=12.0.0",
    "json-repair>=0.32.0",
    "types-python-dateutil>=2.9.0.20241003",
    "markdownify>=1.2.0",
    "apscheduler>=3.11.0",
    "lxml>=6.0.2",
    "posthog>=3.0.0",
    "aiolimiter>=1.2.1"
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.32.0",
    "types-aiofiles>=23.0.0",
    "types-psycopg2>=2.9.0",
    "types-pytz>=2024.0.0",
    "types-tqdm>=4.66.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "vulture>=2.14.0",
    "deadcode>=2.4.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
exclude = ["js-services", ".git", "src/generated/"]

[tool.ruff.lint]
select = [
    # "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "UP038",  # this rule is deprecated https://docs.astral.sh/ruff/rules/non-pep604-isinstance/
    # nice to have, but too noisy for now and not trivial to fix
    "B904",   # raise exceptions with raise ... from err or raise ... from None
    "N818",   # exception name should be named with an Error suffix
    "SIM113", # Use `enumerate()` for index variable in loop
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # assert allowed in tests

[tool.ruff.lint.isort]
known-first-party = ["src", "connectors"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.vulture]
# Configuration for unreachable code detection
min_confidence = 95
exclude = ["tests/", "js-services/", "src/generated/"]
ignore_decorators = ["@app.route", "@webhook.*", "@*task", "@*_task"]
ignore_names = ["setUp", "tearDown", "test_*"]
paths = ["src/"]
sort_by_size = true
verbose = false

[tool.deadcode]
# Configuration for globally unused code detection
# NOTE: deadcode has compatibility issues with modern Python decorator patterns
# This tool may fail on codebases with @decorator() patterns, so we primarily rely on vulture
exclude = [
    "tests/",
    "js-services/",
    "src/generated/",
    # Many files use complex decorators that cause deadcode parsing failures
    # Excluding broad patterns to avoid crashes - vulture handles these better
    "src/clients/",
    "src/ingest/",
    "src/mcp/",
    "src/utils/",
]
ignore-names = ["*Mixin", "*Base*", "*ABC", "setUp", "tearDown", "test_*"]
